--- a/SMPEditor/SMPEditor/MainWindow.xaml
+++ b/SMPEditor/SMPEditor/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SMPEditor"
-        xmlns:CustomControls="clr-namespace:Yu5h1Tools.WPFExtension.CustomControls;assembly=Yu5h1Tools.WPFExtension" xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="SMPEditor.MainWindow"
+        xmlns:CustomControls="clr-namespace:Yu5h1Tools.WPFExtension.CustomControls;assembly=Yu5h1Tools.WPFExtension" xmlns:System="clr-namespace:System;assembly=mscorlib" xmlns:WPFExtension="clr-namespace:Yu5h1Tools.WPFExtension;assembly=Yu5h1Tools.WPFExtension" x:Class="SMPEditor.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid>
@@ -18,25 +18,27 @@
             <ColumnDefinition Width="498*"/>
         </Grid.ColumnDefinitions>
         <TextBox x:Name="textBox" Margin="10.347,10.485,9.713,2.901" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" Grid.Column="1" Grid.Row="1"/>
-        <CustomControls:MultiSelectTreeView x:Name="treeView" Margin="10,10.485,9.653,2.901" Grid.Row="1" VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.VirtualizationMode="Recycling"/>
+        <CustomControls:MultiSelectTreeView x:Name="treeView" Margin="10,10.485,9.653,2.901" Grid.Row="1" VirtualizingPanel.IsVirtualizing="True" VirtualizingPanel.VirtualizationMode="Recycling"/>
         <Button x:Name="clear_btn" Content="clear" Margin="10.347,0,182.713,0" VerticalAlignment="Center" Click="Clear_btn_Click" Grid.Column="1" Grid.Row="2" Height="22"/>
         <CustomControls:PathSelector x:Name="NifSelector" Height="23" Margin="10,0" VerticalAlignment="Center" Width="Auto" label="NifFile:" TextChanged="NifSelector_TextChanged" Grid.Column="1" FileFilter="Nif File|*.nif"/>
         <Grid Margin="0,0.099,2.653,0.119" Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="50*"/>
-                <ColumnDefinition Width="23*"/>
+                <ColumnDefinition Width="61*"/>
+                <ColumnDefinition Width="12*"/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="Add_btn" Content="Add" Margin="8.396,0,9.802,0" Click="Add_btn_Click" Grid.Column="1" VerticalAlignment="Center"/>
-            <ComboBox x:Name="comboBox" Margin="10,6,11.604,6" VerticalAlignment="Center" SelectedIndex="0" Height="22">
-                <System:String>bone</System:String>
-                <System:String>bone-default</System:String>
-                <System:String>generic-constraint</System:String>
-                <System:String>generic-constraint-default</System:String>
-                <System:String>generic-constraint(Horizontal)</System:String>
+            <Button x:Name="Add_btn" Content="Add" Margin="6.723,6,5.802,6" Click="Add_btn_Click" Grid.Column="1" VerticalAlignment="Center" Height="22"/>
+            <ComboBox x:Name="comboBox" Margin="6" VerticalAlignment="Center" SelectedIndex="0" Height="22">
+                <!--<StackPanel HorizontalAlignment="Left" Height="17" Margin="0" Grid.Row="1" VerticalAlignment="Top" Orientation="Horizontal" Grid.ColumnSpan="2">
+                    <Label x:Name="bone_lb" Content="bone                  " Padding="0"/>
+                    <Slider x:Name="marginMultiplier_slider" Grid.Column="1" HorizontalAlignment="Right" Margin="0" Grid.Row="1" VerticalAlignment="Top" Height="16" Width="100" Maximum="1"/>
+                </StackPanel>-->
             </ComboBox>
+
         </Grid>
         <TextBox x:Name="searchTextBox" Margin="58,3,9.653,2.515"/>
         <Label x:Name="label" Content="Filter:" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Width="43" Padding="0"/>
         <Label x:Name="label1" Content="Development Version" Grid.Column="1" Margin="0,0,9.713,0" Grid.Row="2" FontWeight="Bold" VerticalAlignment="Center" Width="136" HorizontalAlignment="Right"/>
+
+
     </Grid>
 </Window>
